components/button/index.css
/* ... */
.spectrum-Button--sizeL {
  --spectrum-button-min-width: calc(var(--spectrum-component-height-200) * var(--spectrum-button-minimum-width-multiplier));

  --spectrum-button-border-radius: var(--spectrum-component-pill-edge-to-text-200);
  --spectrum-button-height: var(--spectrum-component-height-200);

  --spectrum-button-font-size: var(--spectrum-font-size-200);

  --spectrum-button-edge-to-visual: calc(var(--spectrum-component-pill-edge-to-visual-200) - var(--spectrum-button-border-width));
  --spectrum-button-edge-to-visual-only: var(--spectrum-component-pill-edge-to-visual-only-200);
  --spectrum-button-edge-to-text: calc(var(--spectrum-component-pill-edge-to-text-200) - var(--spectrum-button-border-width));
  --spectrum-button-padding-label-to-icon: var(--spectrum-text-to-visual-200);
  --spectrum-button-top-to-text: var(--spectrum-button-top-to-text-large);
  --spectrum-button-bottom-to-text: var(--spectrum-button-bottom-to-text-large);
}

.spectrum-Button--sizeXL {
  --spectrum-button-min-width: calc(var(--spectrum-component-height-300) * var(--spectrum-button-minimum-width-multiplier));

  --spectrum-button-border-radius: var(--spectrum-component-pill-edge-to-text-300);
  --spectrum-button-height: var(--spectrum-component-height-300);

  --spectrum-button-font-size: var(--spectrum-font-size-300);

  --spectrum-button-edge-to-visual: calc(var(--spectrum-component-pill-edge-to-visual-300) - var(--spectrum-button-border-width));
  --spectrum-button-edge-to-visual-only: var(--spectrum-component-pill-edge-to-visual-only-300);
  --spectrum-button-edge-to-text: calc(var(--spectrum-component-pill-edge-to-text-300) - var(--spectrum-button-border-width));
  --spectrum-button-padding-label-to-icon: var(--spectrum-text-to-visual-300);
  --spectrum-button-top-to-text: var(--spectrum-button-top-to-text-extra-large);
  --spectrum-button-bottom-to-text: var(--spectrum-button-bottom-to-text-extra-large);

}

.spectrum-Button {
  @inherit: %spectrum-BaseButton;
  @inherit: %spectrum-ButtonWithFocusRing;

  border-radius: var(--mod-button-border-radius, var(--spectrum-button-border-radius));
  border-width: var(--mod-button-border-width, var(--spectrum-button-border-width));
  border-style: solid;
  font-size: var(--mod-button-font-size, var(--spectrum-button-font-size));
  font-weight: var(--mod-bold-font-weight, var(--spectrum-bold-font-weight));
  gap: var(--mod-button-padding-label-to-icon, var(--spectrum-button-padding-label-to-icon));
  min-inline-size: var(--mod-button-min-width, var(--spectrum-button-min-width));
  min-block-size: var(--mod-button-height, var(--spectrum-button-height));
  /* Start with text-only padding */
  padding-block: 0;
  padding-inline: var(--mod-button-edge-to-text, var(--spectrum-button-edge-to-text));
  position: relative;

  /* let staticColor variants inherit their color */
  color: inherit;

  margin-block: var(--mod-button-margin-block);
  margin-inline-end: var(--mod-button-margin-right);
  margin-inline-start: var(--mod-button-margin-left);

  &:hover,
  &:active {
    box-shadow: none;
  }

  .spectrum-Icon {
    margin-inline-start: calc(
      var(--mod-button-edge-to-visual, var(--spectrum-button-edge-to-visual)) -
      var(--mod-button-edge-to-text, var(--spectrum-button-edge-to-text))
    );
    color: inherit;
  }

  /* correct focus indicator radius for t-shirt sizing */
  &::after {
    border-radius: calc(var(--mod-button-border-radius, var(--spectrum-button-border-radius)) + var(--mod-focus-indicator-gap, var(--spectrum-focus-indicator-gap)));
  }

  &.spectrum-Button--iconOnly {
    min-inline-size: unset;
    padding: calc(var(--mod-button-edge-to-visual-only, var(--spectrum-button-edge-to-visual-only)) - var(--mod-button-border-width, var(--spectrum-button-border-width)));
    border-radius: 50%;

    .spectrum-Icon {
      margin-inline-start: 0;
    }

    &::after {
      border-radius: 50%;
    }
  }
}

a.spectrum-Button {
  @inherit: %spectrum-AnchorButton;
}

.spectrum-Button-label {
  @inherit: %spectrum-ButtonLabel;
  padding-block-start: calc(var(--mod-button-top-to-text, var(--spectrum-button-top-to-text)) - var(--mod-button-border-width, var(--spectrum-button-border-width)));
  padding-block-end: calc(var(--mod-button-bottom-to-text, var(--spectrum-button-bottom-to-text)) - var(--mod-button-border-width, var(--spectrum-button-border-width)));
  white-space: nowrap;
  line-height: var(--mod-button-line-height, var(--spectrum-button-line-height));
  align-self: start;
}

.spectrum-Button {
  &:focus-visible,
  &.is-focused {
    &::after {
      box-shadow: 0 0 0 var(--mod-button-focus-ring-thickness, var(--spectrum-button-focus-ring-thickness)) var(--mod-button-focus-ring-color, var(--spectrum-button-focus-indicator-color));
    }
  }
}

/* special cases for focus-ring */
.spectrum-Button {
  transition: border-color var(--mod-button-animation-duration, var(--spectrum-button-animation-duration)) ease-in-out;

  &::after {
    position: absolute;
    inset: 0;

    margin: calc((var(--mod-button-focus-ring-gap, var(--spectrum-button-focus-ring-gap)) + var(--mod-button-border-width, var(--spectrum-button-border-width))) * -1);

    border-radius: var(--mod-button-focus-ring-border-radius, var(--spectrum-button-focus-ring-border-radius));

    transition: box-shadow var(--mod-button-animation-duration, var(--spectrum-button-animation-duration)) ease-in-out;

    pointer-events: none;
    content: '';
  }

  &:focus-visible {
    /* kill the default ring */
    box-shadow: none;
    outline: none;

    &::after {
      box-shadow: 0 0 0 var(--mod-button-focus-ring-thickness, var(--spectrum-button-focus-ring-thickness)) var(--highcontrast-button-focus-ring-color, var(--mod-button-focus-ring-color,
            var(--mod-button-focus-ring-color, var(--spectrum-button-focus-indicator-color))));
    }
  }
}
/* ... */

